# transformers-laptop-bench

./: .gitignore  LICENSE  README.md  bench.toml  pyproject.toml
results/: probe-int4.csv  probe-int4.json  probe-int4.md  sample-m3pro.csv  sample-m3pro.json  sample-m3pro.md
src/bench/: __init__.py  cli.py  hardware.py  measure.py  model.py  prompts.py  report.py  runner.py
